# TorchForge

./: .gitignore  LICENSE  README.md  occupy_h800.py  prepare_ultrafineweb_100m.py  pyproject.toml  test_ultra.py
data/openbmb_UltraFineWeb_100m_tokens/: manifest.json
docs/: index.md
experiments/: __init__.py
experiments/dsv3_assembly/: README.md  __init__.py  deepseek_v3_assembly.py
experiments/dsv3_reference/: __init__.py  config.py  (+1 more)
tests/: test_common_nn_public_api.py  test_compressed_kv_indexer_public_api.py  test_csa_public_api.py  test_decoder_public_api.py  test_dsv3_mla.py  test_dsv3_reference_replacement.py  test_dsv3_train_public_api.py  test_dsv4_data_fingerprint.py  test_dsv4_loss_curve_comparison.py  test_dsv4_loss_curve_plot.py  test_dsv4_mla.py  test_dsv4_muon_report_aligned.py  test_dsv4_train_public_api.py  test_embedding_public_api.py  test_expert_mlp_public_api.py  test_gqa_public_api.py  test_hash_router_public_api.py  test_hca_public_api.py  test_hyper_connection_public_api.py  test_incremental_component_replacement_dsv3.py  test_lm_head_public_api.py  test_loss_public_api.py  test_mask_public_api.py  test_mha_public_api.py  test_mla_component_contract.py  test_mla_public_api.py  test_mlp_public_api.py  test_moe_public_api.py  test_mqa_public_api.py  test_mtp_public_api.py  test_optim_public_api.py  test_patch_swap.py  test_position_public_api.py  test_residual_public_api.py  test_shared_expert_public_api.py  test_sliding_window_mask_public_api.py  test_topk_router_public_api.py  test_train_step_public_api.py
torchforge/: __init__.py
(+88 files in other folders)
